# Soroban-ZK-Std

./: .gitignore  BENCHMARK.md  BENCHMARKS.md  Cargo.toml  JACOBIAN_IMPLEMENTATION.md  Makefile  README.md  WASM_SIZES.md  libdummy_test.rlib
.github/workflows/: ci.yml  deploy.yml  docs-checker.yml
contracts/verifier-sample/: .gitignore
crates/soroban-zk-std/: Cargo.toml  README.md
crates/zk-core/: Cargo.toml
crates/zk-soroban/: Cargo.toml
crates/zk-soroban/benches/: instruction_cost.rs
crates/zk-soroban/examples/: gen_vectors.rs
crates/zk-soroban/src/: bin.rs  error.rs  groth16.rs  hash.rs  lib.rs  merkle.rs  pairing.rs  transcript.rs
docs/: ASP_Integration.mdx  Getting_Started.md  cap0075-integration-guide.mdx  error-handling-reference.mdx  field-arithmetic-api.mdx  getting-started-guide.md  getting-started-guide.mdx  polynomial-operations.mdx  upgrading-from-v1-to-v2.md  zk-cryptography-glossary.md  zk-cryptography-glossary.mdx
docs/math/: bulletproofs.md  cap0075.md  cyclotomic.md  cyclotomic.mdx  fiat_shamir.md  fq12_sparse.md  fq12_sparse.mdx  fq2.md  fq_inv.md  fq_inv.mdx  fri.md  halo2_perm.mdx  kzg_commit.md  lagrange.md  merkle.md  montgomery.md  non_native_add.md  non_native_add.mdx  ntt.mdx  plonk_lin.md  poseidon2.md  rescue.md  rescue.mdx  tonelli.md
dump_g2/: Cargo.toml
dump_g2/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: CodeBlock.tsx  DocsLayout.tsx  Navbar.tsx  Sidebar.tsx  theme-toggle.tsx
frontend/data/: mockPortfolio.ts  mockVersions.ts
(+55 files in other folders)
