
[package]
name = "zk-soroban"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
# Inherited from workspace (no_std enabled)
soroban-sdk = { workspace = true, features = ["hazmat-crypto"]}
ethnum = { workspace = true }
zk-core = { workspace = true }

# Math & Crypto (Strictly no_std)
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
ark-bn254 = { version = "0.6.0", default-features = false }
ark-ff = { version = "0.6.0", default-features = false }
ark-ec = { version = "0.6.0", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[bench]]
name = "instruction_cost"